# parking-report-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  config.py  db.py  logging_config.py  main.py  models.py
app/services/: agent.py  charts.py  jobs.py  metrics.py  report.py
app/templates/: index.html
sample/: data.csv  sample_report.docx  停车明细分析报告_模板.docx
scripts/: generate_sample.py
tests/: test_agent.py  test_api_flow.py  test_config.py  test_metrics.py  test_report.py
